--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^22.13.5",
+        "@types/uuid": "^10.0.0",
         "@vue/eslint-config-typescript": "^14.3.0",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -39,6 +40,7 @@
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "typescript": "^5.2.2",
+        "uuid": "^11.1.0",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
         "ziggy-js": "^2.4.2"
