--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/vue-table": "^8.21.3",
+        "@tinymce/tinymce-vue": "^6.3.0",
         "@vitejs/plugin-vue": "^6.0.0",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
