--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.4.1",
+        "sortablejs": "^1.15.6",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
@@ -44,6 +45,8 @@
         "uuid": "^11.1.0",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
+        "vue-draggable-next": "^2.3.0",
+        "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
